0.6.0 (Not Alpha 2)